2014-07-17  Yu-Jie Lin  <livibetter@gmail.com>

* bubbles.c (main): fix usage line

2014-07-16  Yu-Jie Lin  <livibetter@gmail.com>

* bubbles.c: fix warnings reported with -Wall -Wextra

2014-07-16  Alexandre Dantas <eu@alexdantas.net>

* clock.c: fix warnings reported with -Wall -Wextra

2014-07-07  Yu-Jie Lin  <livibetter@gmail.com>

* bubbles.c (main): add -d option for update interval

2014-07-06  Yu-Jie Lin  <livibetter@gmail.com>

* bubbles.c, clock.c (main): make cursor invisible